<?xml version="1.0"?>
<package format="3">
  <name>dual_arm_handover</name>
  <version>0.1.0</version>
  <description>Bimanual manipulation with diffusion policy</description>
  <maintainer email="joshisagar361@gmail.com">Sagar Joshi</maintainer>
  <license>MIT</license>
  
  <exec_depend>rclpy</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>